--- a/.do/deploy.template.yml
+++ b/.do/deploy.template.yml
@@ -5,7 +5,7 @@ spec:
       dockerfile_path: Dockerfile
       http_port: 80
       git:
-        repo_clone_url: https://github.com/HiEventsDev/hi.events-digitalocean.git
+        repo_clone_url: https://github.com/traninvilela/explodecoracao.git
         branch: main
       envs:
         - key: APP_KEY
